# LoFiBox

./: CHANGELOG.md  LICENSE  README.md  README.zh.md  platformio.ini
.github/workflows/: ci.yml
lib/ESP32-audioI2S/: Audio.cpp  Audio.h  CMakeLists.txt  library.json
lib/ESP32-audioI2S/aac_decoder/: aac_decoder.cpp  aac_decoder.h
lib/ESP32-audioI2S/flac_decoder/: flac_decoder.cpp  flac_decoder.h
lib/ESP32-audioI2S/mp3_decoder/: mp3_decoder.cpp  mp3_decoder.h
src/: main.cpp
src/app/: eq_audio.cpp  eq_dsp.cpp  eq_dsp.h  input_keys.h  library.cpp  library.h  player.cpp  player.h
src/board/: BoardBase.h  BoardFactory.cpp  CardputerBoard.cpp  CardputerBoard.h  LilyGoKeyboard.cpp  LilyGoKeyboard.h  TLoraPagerBoard.cpp  TLoraPagerBoard.h  sd_utils.h
src/display/: DisplayConfig.h  DisplayInterface.cpp  DisplayInterface.h
src/display/drivers/: ST7796.cpp  ST7796.h
src/ui/: LV_Helper.cpp  LV_Helper.h  lv_conf.h  ui_common.cpp  ui_common.h  ui_stub.cpp
src/ui/assets/: About.c  Equalizer.c  Library.c  Music.c  NowPlaying.c  Playlists.c  Settings.c  assets.h  logo.c
src/ui/common/: sort_utils.cpp  sort_utils.h  text_utils.cpp  text_utils.h
src/ui/fonts/: fonts.cpp  fonts.h  lv_font_noto_sc_16_2bpp.c
src/ui/lofibox/: lofibox_components.cpp  lofibox_components.h  lofibox_ui.cpp  lofibox_ui.h  lofibox_ui_internal.h
tools/fonts/: gb2312_6763.txt
tools/lv_font_conv/: package.json
tools/lv_font_conv_tool/: package-lock.json  package.json
variants/lilygo_tlora_pager/: pins_arduino.h
variants/lilygo_tlora_pager/envs/: tlora_pager.ini
(+125 files in other folders)
